better fix phones overflow

--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ h2 {
   height: 100%;
   position: absolute;
 }
-.clusterLabel {
+.cluster-label {
   position: absolute;
   transform: translate(-50%, -50%);
   text-transform: uppercase;
